--- a/client/src/components/Forms/styles.module.css
+++ b/client/src/components/Forms/styles.module.css
@@ -2,8 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-style: outset;
     padding: 1rem;
+    background-color: rgb(52, 51, 71);
+    height: 450px;
+    border-radius: 1rem;
 }
 
 .input{
@@ -16,7 +18,7 @@
 .submit_btn{
     margin-top: .5rem;
     width: 100%;
-    background-color: rgb(2, 2, 169);
+    background-color: rgb(0, 0, 147);
     height: 3rem;
     font-size: 20px
 }
@@ -24,7 +26,7 @@
 .clear_btn{
     margin-top: .5rem;
     width: 100%;
-    background-color: red;
+    background-color: rgb(169, 1, 1);
     height: 2rem;
     font-size: 15px
 }
