--- a/client/src/components/Posts/styles.module.css
+++ b/client/src/components/Posts/styles.module.css
@@ -1,8 +1,9 @@
 .memory{
-    border-style: dashed;
-    width: 20vw;
-    padding: 0 1rem 1rem 1rem;
-    margin-right: 0.5rem;
+    width: 300px;
+    padding: 1rem;
+    background-color: rgb(52, 51, 71);
+    height: 450px;
+    border-radius: 1rem;
 }
 
 .row{
@@ -12,7 +13,8 @@
 }
 
 .image{
-    width: 20vw;
+    width: 100%;
+    border-radius: 0.5rem;
 }
 
 .upper{
@@ -20,7 +22,7 @@
 }
 
 .container{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1000px;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 50px;
 }
