--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -1,5 +1,5 @@
-*{
-    background-color: black;
+html{
+    background-color: rgb(34, 32, 56);
     color: white;
 }
 
@@ -13,9 +13,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-style: outset;
     border-radius: 1rem;
     width: 80vw;
+    background-color: rgb(52, 51, 71);
 }
 
 .memories_img{
@@ -27,6 +27,7 @@ body{
     display: flex;
     justify-content: space-between;
     margin-top: 1rem;
+    width: 80vw;
 }
 
 /* all buttons */
