--- a/client/src/components/Forms/styles.module.css
+++ b/client/src/components/Forms/styles.module.css
@@ -6,12 +6,15 @@
     background-color: rgb(52, 51, 71);
     height: 450px;
     border-radius: 1rem;
+    position: sticky;
+    bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .input{
     margin-bottom: 1rem;
     padding: .75rem;
-    width: 15vw;
+    width: 250px;
     font-size: 20px;
 }
 
