--- a/client/src/components/Posts/styles.module.css
+++ b/client/src/components/Posts/styles.module.css
@@ -1,8 +1,7 @@
 .memory{
-    width: 300px;
-    padding: 1rem;
+    flex-grow: 1;
+    padding: 1rem 1rem 0 1rem;
     background-color: rgb(52, 51, 71);
-    height: 500px;
     border-radius: 1rem;
 }
 
@@ -19,10 +18,18 @@
 
 .upper{
     border-bottom: solid;
+    height: 300px;
+}
+
+.lower{
+    height: 200px;
 }
 
 .container{
+    flex-grow: 1;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 300px));
+    justify-content: center;
     gap: 50px;
+    margin-bottom: 50px;
 }
