--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -4,7 +4,7 @@ html{
     word-wrap: break-word;
 }
 
-body{
+.main{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,10 +25,11 @@ body{
 }
 
 .posts{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
     width: 80vw;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    margin-top: 1rem;
+    justify-content: center;
 }
 
 /* all buttons */
