--- a/client/src/components/Auth/styles.module.css
+++ b/client/src/components/Auth/styles.module.css
@@ -1,14 +1,10 @@
-.postForm{
+.form{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 1.5rem;
     background-color: rgb(52, 51, 71);
-    height: 450px;
-    border-radius: 1rem;
-    position: sticky;
-    bottom: 100px;
-    margin-bottom: 50px;
+    border-radius: 1.5rem;
 }
 
 .input{
@@ -23,13 +19,6 @@
     width: 100%;
     background-color: rgb(0, 0, 147);
     height: 3rem;
-    font-size: 20px
-}
-
-.clear_btn{
-    margin-top: .5rem;
-    width: 100%;
-    background-color: rgb(169, 1, 1);
-    height: 2rem;
-    font-size: 15px
+    font-size: 20px;
+    margin-bottom: 1rem;
 }
