--- a/client/src/components/Navbar/styles.module.css
+++ b/client/src/components/Navbar/styles.module.css
@@ -28,6 +28,10 @@
     padding: 0.5rem;
 }
 
+.log_btn:hover{
+    background-color: rgb(42, 42, 106);
+}
+
 .loggedIn{
     display: flex;
     align-items: center;
