search function with pagination implemented
- bugs with searching

--- a/client/src/components/Home/styles.module.css
+++ b/client/src/components/Home/styles.module.css
@@ -5,3 +5,10 @@
     margin-top: 1rem;
     justify-content: center;
 }
+
+.forms{
+    height: 700px;
+    position: sticky;
+    bottom: 20px;
+    margin-bottom: 40px;
+}
