--- a/client/src/components/Forms/styles.module.css
+++ b/client/src/components/Forms/styles.module.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.5rem;
+    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
     background-color: rgb(52, 51, 71);
-    height: 450px;
     border-radius: 1rem;
 }
 
