--- a/client/src/components/Search/styles.module.css
+++ b/client/src/components/Search/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.5rem;
+    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
     background-color: rgb(52, 51, 71);
     border-radius: 1rem;
     margin-bottom: 1rem;
@@ -13,4 +13,12 @@
     padding: .75rem;
     width: 250px;
     font-size: 20px;
+}
+
+.search_btn{
+    margin-top: .5rem;
+    width: 100%;
+    background-color: rgb(0, 0, 147);
+    height: 3rem;
+    font-size: 20px
 }
