--- a/client/src/components/Posts/styles.module.css
+++ b/client/src/components/Posts/styles.module.css
@@ -1,5 +1,4 @@
 .memory{
-    flex-grow: 1;
     padding: 1rem 1rem 0 1rem;
     background-color: rgb(52, 51, 71);
     border-radius: 1rem;
@@ -7,22 +6,22 @@
 
 .row{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
 .image{
     width: 100%;
+    max-height: 60%;
     border-radius: 0.5rem;
 }
 
 .upper{
     border-bottom: solid;
-    height: 300px;
+    height: 280px;
 }
 
 .lower{
-    height: 200px;
+    height: 220px;
 }
 
 .container{
@@ -32,4 +31,8 @@
     justify-content: center;
     gap: 50px;
     margin-bottom: 50px;
+}
+
+.header{
+    margin: 10px 0 0 0;
 }
