--- a/client/src/components/Forms/styles.module.css
+++ b/client/src/components/Forms/styles.module.css
@@ -12,6 +12,8 @@
     padding: .75rem;
     width: 250px;
     font-size: 20px;
+    border-radius: 1rem;
+    border-style: none;
 }
 
 .submit_btn{
@@ -19,7 +21,8 @@
     width: 100%;
     background-color: rgb(0, 0, 147);
     height: 3rem;
-    font-size: 20px
+    font-size: 20px;
+    border-radius: 1rem;
 }
 
 .clear_btn{
@@ -27,5 +30,6 @@
     width: 100%;
     background-color: rgb(169, 1, 1);
     height: 2rem;
-    font-size: 15px
+    font-size: 15px;
+    border-radius: 1rem;
 }
