--- a/client/src/components/Search/styles.module.css
+++ b/client/src/components/Search/styles.module.css
@@ -13,6 +13,8 @@
     padding: .75rem;
     width: 250px;
     font-size: 20px;
+    border-radius: 1rem;
+    border-style: none;
 }
 
 .search_btn{
@@ -20,5 +22,6 @@
     width: 100%;
     background-color: rgb(0, 0, 147);
     height: 3rem;
-    font-size: 20px
+    font-size: 20px;
+    border-radius: 1rem;
 }
