--- a/client/src/components/SinglePost/styles.module.css
+++ b/client/src/components/SinglePost/styles.module.css
@@ -12,6 +12,7 @@
 
 .container:last-child{
     flex-direction: column;
+    background-color: rgb(34, 32, 56);
 }
 
 .recommendedPosts{
@@ -20,10 +21,10 @@
 
 .post{
     width: 15%;
-    border-style: solid;
+    background-color: rgb(52, 51, 71);
     border-radius: 1rem;
     margin-right: 1rem;
-    padding: 0.5rem;
+    padding: 1rem;
 }
 
 .post_img{
