--- a/client/src/components/SinglePost/styles.module.css
+++ b/client/src/components/SinglePost/styles.module.css
@@ -1,12 +1,13 @@
 .container{
     box-sizing: border-box;
     display: flex;
-    align-content: center;
+    justify-content: center;
     background-color: rgb(52, 51, 71);
     width: 80vw;
     margin-top: 1rem;
     border-radius: 1rem;
     padding: 1rem;
+    flex-wrap: wrap-reverse;
 }
 
 .container:last-child{
@@ -16,23 +17,26 @@
 
 .recommendedPosts{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .post{
-    width: 15%;
+    width: 200px;
     background-color: rgb(52, 51, 71);
     border-radius: 1rem;
-    margin-right: 1rem;
+    margin: 0 1rem 1rem 0;
     padding: 1rem;
 }
 
 .left{
-    border-style: solid;
-    width: 50%;
+    flex-grow: 1;
+    min-width: 45%;
+    margin-right: 1rem;
 }
 
 .post_img{
-    width: 50%;
+    width: 750px;
+    margin: 0;
 }
 
 .img{
@@ -50,5 +54,21 @@
 }
 
 .commentSection{
+    overflow-y: scroll;
+    height: 100px;
+    margin-bottom: 1rem;
+}
 
+.input{
+    width: 100%;
+    padding: .75rem;
+    font-size: 15px;
+    border-radius: 1rem 0 0 1rem;
+    border-style: none;
+}
+
+.comment_btn{
+    padding: 0 1rem 0 1rem;
+    border-radius: 0 1rem 1rem 0;
+    background-color: rgb(34, 32, 56);
 }
