improved styling for singlepost and navbar

--- a/client/src/components/Navbar/styles.module.css
+++ b/client/src/components/Navbar/styles.module.css
@@ -49,3 +49,9 @@
     font-size: 20px;
     margin-right: 2rem;
 }
+
+@media screen and (max-width: 650px) {
+    .username {
+        display: none;
+    }
+}
