--- a/client/src/components/SinglePost/styles.module.css
+++ b/client/src/components/SinglePost/styles.module.css
@@ -29,6 +29,7 @@
 }
 
 .left{
+    width: 700px;
     flex-grow: 1;
     min-width: 45%;
     margin-right: 1rem;
@@ -45,7 +46,7 @@
 }
 
 .title{
-    font-size: 50px; 
+    font-size: 50px;
     margin: 0;
 }
 
