--- a/client/src/components/Profile/style.module.css
+++ b/client/src/components/Profile/style.module.css
@@ -1,5 +1,46 @@
 .container{
+    margin-top: 2rem;
+    display: flex;
+    padding: 2rem;
+    background-color: rgb(52, 51, 71);
+    border-radius: 3rem;
+}
+
+.pfp{
+    width: 360px;
+    height: 360px;
+    border-radius: 20rem;
+}
+
+.info{
     display: flex;
     flex-direction: column;
-    
+    justify-content: center;
+}
+
+.img_section{
+    display: flex;
+    flex-direction: column;
+    margin-right: 10rem;
+}
+
+.input{
+    padding: .75rem;
+    font-size: 20px;
+    border-radius: 1rem;
+    border-style: none;
+}
+
+.submit_btn{
+    margin-top: 2rem;
+    width: 100%;
+    background-color: rgb(0, 0, 75);
+    height: 3rem;
+    font-size: 20px;
+    border-radius: 1rem;
+}
+
+.label{
+    margin-top: 1rem;
+    font-size: x-large;
 }
