--- a/client/src/components/Posts/styles.module.css
+++ b/client/src/components/Posts/styles.module.css
@@ -63,3 +63,10 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
+.tags{
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
