--- a/client/src/components/SinglePost/styles.module.css
+++ b/client/src/components/SinglePost/styles.module.css
@@ -73,3 +73,15 @@
     border-radius: 0 1rem 1rem 0;
     background-color: rgb(34, 32, 56);
 }
+
+.rec_post_img{
+    width: 100%;
+    border-radius: 1rem;
+}
+
+.text{
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
